<resources>
    <string name="login_name">login module</string>
    <string name="login_location">Region</string>
    <string name="login_chose_location">Select your region</string>
    <string name="login_login_account">Login Your Account</string>
    <string name="login_login">Login</string>
    <string name="login_account">Account</string>
    <string name="login_input_account">enter your account</string>
    <string name="login_right_email">Enter the correct email address</string>
    <string name="login_psw">Password</string>
    <string name="login_input_psw">enter your password</string>
    <string name="login_forget_psw">Forget Password?</string>
    <string name="login_register">No account? Go to register</string>
    <string name="login_privacy">Agree<u>"User Agreement And Privacy Policy"</u></string>
    <string name="login_checkPrivacy">Please Confirm You’ve Read The User Agreement And Privacy Policy</string>

    <string name="login_register_account">Register Account</string>
    <string name="login_register_account_tip">With a personal account, your fitness data and device preferences can be securely and permanently stored</string>
    <string name="login_next">Next Step</string>
    <string name="login_verification">Verification Code</string>
    <string name="login_input_verification">enter your verification code</string>
    <string name="login_send">send</string>

    <string name="login_set_password">Set Password</string>
    <string name="login_inconsistent">The two passwords are inconsistent</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_finish">complete</string>
    <string name="login_find_password">Retrieve password</string>
    <string name="login_reset_Success">Password Reset Succeeded</string>

    <string name="login_change_password">Change Password</string>
    <string name="login_old_password">Old Password</string>
    <string name="login_new_password">New Password</string>
    <string name="login_confirm_new_password">Confirm New Password</string>
    <string name="login_change_success">Change Success</string>
</resources>
