<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/title"/>

        <TextView
            android:id="@+id/titleBigTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_location"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"/>

        <RelativeLayout
            android:id="@+id/countryRl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_bg_edit">

            <TextView
                android:id="@+id/countryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_chose_location"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/login_gray_text" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/login_account"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/userEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_account"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
                android:textColorHint="@color/login_gray_text"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/login_psw"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/pswEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_psw"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:textColorHint="@color/login_gray_text"
                android:layout_toStartOf="@id/lawsCb"
                android:layout_marginStart="15dp"/>

            <CheckBox
                android:id="@+id/lawsCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/login_bg_checkbox"
                android:button="@null"
                android:layout_marginEnd="15dp"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/forgetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_forget_psw"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"/>


        <TextView
            android:id="@+id/loginTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_login"
            android:textColor="@android:color/white"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:background="@drawable/login_bg_bottom"/>

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/privacyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_privacy"
            android:layout_gravity="center_vertical"
            android:textColor="@color/rayblue"
            android:textColorLink="@color/blue"
            android:textSize="11sp"/>

    </LinearLayout>


</RelativeLayout>