<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/title"/>

        <TextView
            android:id="@+id/titleBigTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/login_set_password"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/pswEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_psw"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:textColorHint="@color/login_gray_text"
                android:layout_toStartOf="@id/lawsCb"
                android:layout_marginStart="15dp"/>

            <CheckBox
                android:id="@+id/lawsCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:button="@drawable/login_bg_checkbox"
                android:background="@null" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/login_confirm_password"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/rayblue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_bg_edit">

            <EditText
                android:id="@+id/confirmPswEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_input_psw"
                android:inputType="textPassword"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:textColorHint="@color/login_gray_text"
                android:layout_toStartOf="@id/lawsCb1"
                android:layout_marginStart="15dp"/>

            <CheckBox
                android:id="@+id/lawsCb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:button="@drawable/login_bg_checkbox"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/finishTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@android:color/white"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:background="@drawable/login_bg_bottom"
            android:text="@string/login_finish"/>


    </LinearLayout>
</RelativeLayout>